--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -472,3 +472,15 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90460/7c1e912e_f85c_42c9_86b6_1b9659c2d543.jpg
   link: https://www.secretescapes.de/5-star-auszeit-in-thailands-megacity-vie-hotel-bangkok-mgallery-by-sofitel-bangkok-thailand/sale
   domestic: false
+
+- title: Traumhafte Aussichten im sizilianischen Taormina
+  id: traumhafte-aussichten-im-sizilianischen-taormina
+  location: NH Collection Taormina, Sizilien, Italien
+  description: 5*-Sterne-Komfort im Süden Italien inkl. Frühstück oder Halbpension &amp; Zugang zum Spa
+  price: 220
+  price-description: pro Zimmer pro Nacht
+  saved: 45
+  expires: 2019/04/09
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/37770/7869da57_fcf7_4531_9e46_73296f9be162.jpg
+  link: https://www.secretescapes.de/traumhafte-aussichten-im-sizilianischen-taormina-nh-collection-taormina-sizilien-italien1/sale
+  domestic: false
